2008-08-17  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn.common-error.in (Letter "O" in a number): Fix
	replacement.

2008-08-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/gaupol.gtk.conf.spec: Remove option 'smart_open_translation' and
	add option 'align_method'.

	* data/glade/dialogs/open.glade:
	* gaupol/gtk/dialogs/open.py:
	Replace adapt check button with an align method combo box.

	* gaupol/agents/open.py (OpenAgent.open_translation):
	* gaupol/gtk/agents/open.py (OpenAgent.open_translation_file):
	Replace keyword argument 'smart' with 'align_method'.

	* gaupol/align.py: New file for align method enumerations.

	* gaupol/gtk/agents/open.py
	(OpenAgent.on_recent_translation_menu_item_activated): Always use align
	method 'position'.

	* gaupol/gtk/main.py: Replace '--adapt-translation' option with
	'--align-method'.

2008-08-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/codes/locales.txt: Remove 'ns_ZA', for 'ns' is not found in
	'iso_639.xml'.

	* gaupol/gtk/dialogs/language.py (LanguageDialog._populate_store): Call
	'check' on the dictionary once to test that it works.

2008-08-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/codes/locales.txt: Remove file.

	* gaupol/locales.py (get_all): Remove function.

	* gaupol/gtk/dialogs/language.py (LanguageDialog._populate_store): Use
	enchant.list_languages.

2008-08-16  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/page.py (Page._get_tab_close_button): Possibly fix cropped
	tab close buttons on Windows.

2008-08-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/page.py (Page._init_widgets): Put the tab widget in an
	event box to be able to recieve events.

	* gaupol/gtk/agents/menu.py
	(MenuAgent.on_page_tab_widget_button_press_event):  Activate the page,
	whose tab was right-clicked.

2008-08-14  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/*:
	* data/ui/ui.xml:
	* gaupol/*:
	Rename dialogue lines to dialogue dashes.

2008-08-14  Osmo Salomaa  <otsaloma@cc.hut.fi>
