@@ -1,3 +1,8 @@
+2008-08-19  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* gaupol/gtk/agents/menu.py (MenuAgent): Update project actions on
+	page-added and page-closed signals.
+
 2008-08-17  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* data/patterns/Latn.common-error.in (Letter "O" in a number): Fix
